@@ -19,7 +19,6 @@ import static java.util.Arrays.asList;
 import static java.util.Collections.emptyList;
 import static java.util.Collections.emptyMap;
 import static java.util.Collections.singletonList;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertNotSame;
@@ -64,7 +63,7 @@ class ProcessorImplTest {
             final Collection<Record> data = IntStream
                     .rangeClosed(1, 3)
                     .mapToObj(idx -> new RecordImpl.BuilderImpl().withInt("value", idx).build())
-                    .collect(toList());
+                    .toList();
             processor.beforeGroup();
             data.forEach(it -> processor.onNext(n -> it, null));
             assertNull(Bufferized.RECORDS);
