@@ -679,7 +679,7 @@ class ReflectionServiceTest {
         {
             assertNotNull(tableOwner.table);
             assertEquals(2, tableOwner.table.size());
-            assertEquals(Stream.of("test1", "test2").collect(toList()),
+            assertEquals(Stream.of("test1", "test2").toList(),
                     tableOwner.table.stream().map(Column::getValue1).collect(toList()));
             assertArrayEquals(IntStream.of(12, 22).toArray(),
                     tableOwner.table.stream().mapToInt(Column::getValue2).toArray());
