@@ -17,7 +17,6 @@ package org.talend.sdk.component.starter.server.service.facet.component;
 
 import static java.util.Arrays.asList;
 import static java.util.Collections.singleton;
-import static java.util.stream.Collectors.toList;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.talend.sdk.component.starter.server.service.Strings.capitalize;
 
@@ -118,7 +117,7 @@ class ComponentGeneratorConfigurationTest {
                                         .stream()
                                         .map(e -> new ComponentGenerator.Property(e.getName(), capitalize(e.getName()),
                                                 e.getType(), false))
-                                        .collect(toList()));
+                                        .toList());
                     }
                 });
         assertEquals(scenario.expectedOutput, result);
