@@ -15,8 +15,6 @@
  */
 package org.talend.sdk.component.sample.other;
 
-import static java.util.stream.Collectors.toList;
-
 import java.io.Serializable;
 import java.util.stream.IntStream;
 
@@ -81,7 +79,7 @@ public class ComplexComponent implements Serializable {
             return new Values(IntStream
                     .range(1, 11)
                     .mapToObj(i -> new Values.Item("file_" + i, "/opt/sample/file_" + i + ".txt"))
-                    .collect(toList()));
+                    .toList());
         }
     }
 }
